--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         </activity>
         <activity android:name=".MenuActivity" >
         </activity>
+        <activity android:name=".ConfirmationActivity" >
+        </activity>
     </application>
 
 </manifest>
